[package]
name = "napchart"
version = "0.1.4-alpha"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
description = "Rust interface for the https://napchart.com API alpha"
readme = "README.md"
repository = "https://github.com/barrowsys/napchart-rs"
license = "MIT"
categories = ["api-bindings"]
 
[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.2", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.3.0", features = ["full"] }

[features]
default = ["blocking"]

blocking = ["reqwest/blocking"]
async = []

[[example]]
name = "api_async"
required-features = ["async"]

[[example]]
name = "api_blocking"
required-features = ["blocking"]
