[package]
name = "napchart"
version = "0.2.0-alpha"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
description = "Rust interface for the https://napchart.com API alpha"
readme = "README.md"
repository = "https://github.com/barrowsys/napchart-rs"
license = "MIT"
categories = ["api-bindings"]
 
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.2", features = ["json", "blocking"] }
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["rt", "macros"] }
