[package]
name = "napchart"
version = "0.3.0"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
description = "Rust interface for the https://napchart.com API alpha"
readme = "README.md"
repository = "https://github.com/barrowsys/napchart-rs"
license = "MIT"
categories = ["api-bindings"]
 
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.2", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
noneifempty = "0.1"
colorsys = "0.6.3"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["rt", "macros"] }
